--- a/README.adoc
+++ b/README.adoc
@@ -31,7 +31,7 @@ docker-compose up -d --build
 docker-compose ps
 ----
 
-== Stop and remove containers, networks, images, and volumes
+== Stop and remove containers
 
 [source, text]
 ----
